--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -27,5 +27,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build Vue
-      - working-directory: Front-end/customerapp-vue
+        working-directory: Front-end/customerapp-vue
         run: npm build
