--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -24,8 +24,26 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Cache node modules
+        id: cache-nodemodules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # caching node_modules
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+            
+      - name: Install Dependencies
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+        working-directory: Front-end/customerapp-vue
+        run: npm ci
 
-      # Runs a single command using the runners shell
-      - name: Build Vue
-      - working-directory: Front-end/customerapp-vue
+      - name: Build
+        working-directory: Front-end/customerapp-vue
         run: npm build
