--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -47,4 +47,4 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build Vue
         working-directory: Front-end/customerapp-vue
-        run: npm build
+        run: npm run build
