--- a/Front-end/customerapp-vue/package.json
+++ b/Front-end/customerapp-vue/package.json
@@ -9,10 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
+    "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -29,8 +31,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
+    "sass": "^1.42.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
