--- a/Back-end/CustomerApp-Api/src/main/resources/hibernate.cfg.xml.example
+++ b/Back-end/CustomerApp-Api/src/main/resources/hibernate.cfg.xml.example
@@ -6,7 +6,7 @@
 <hibernate-configuration>
     <session-factory>
         <property name="connection.driver_class">org.mariadb.jdbc.Driver</property>
-        <property name="connection.url">jdbc:postgresql://localhost:5432/database_naam</property>
+        <property name="connection.url">jdbc:mariadb://localhost/database_naam</property>
         <property name="hibernate.connection.characterEncoding">utf8</property>
         <property name="connection.username">root</property>
         <property name="connection.password">wachtwoord</property>
