--- a/Front-end/customerapp-vue/package.json
+++ b/Front-end/customerapp-vue/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
