--- a/Back-end/CustomerApp-Api/pom.xml
+++ b/Back-end/CustomerApp-Api/pom.xml
@@ -24,13 +24,19 @@
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>com.github.horeca-robot</groupId>
-			<artifactId>database-library</artifactId>
-			<version>1.6</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.6.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -41,6 +47,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
