--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,7 +34,7 @@ jobs:
         # Name of the Docker image
         image: 435914/customerapp-api
         # Tags override for Docker image
-        tags: maven
+        tags: latest
         # Target Docker registry
         registry: docker.io
         # Location of Dockerfile, if not Dockerfile in root directory
