--- a/Front-end/customerapp-vue/Dockerfile
+++ b/Front-end/customerapp-vue/Dockerfile
@@ -1,25 +1,13 @@
-# Choose the Image which has Node installed already
-FROM node:lts-alpine
-
-
-# install simple http server for serving static content
-RUN npm install -g http-server
-
-# set working directory
+# build stage
+FROM node:lts-alpine as build-stage
 WORKDIR /customerapp-vue
-
-
 COPY package*.json ./
-
-
-# install project dependencies
 RUN npm install
-
-# copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
-
-# build app for production with minification
 RUN npm run build
 
-EXPOSE 8080
-CMD [ "http-server", "dist" ]
+# production stage
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /customerapp-vue/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
