--- a/Front-end/customerapp-vue/Dockerfile
+++ b/Front-end/customerapp-vue/Dockerfile
@@ -9,5 +9,9 @@ RUN npm run build
 # production stage
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /customerapp-vue/dist /usr/share/nginx/html
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
