--- a/Front-end/customerapp-vue/Dockerfile
+++ b/Front-end/customerapp-vue/Dockerfile
@@ -11,7 +11,7 @@ FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /customerapp-vue/dist /usr/share/nginx/html
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY /nginx.conf /etc/nginx/conf.d
+COPY nginx/nginx.conf /etc/nginx/conf.d
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
