--- a/Back-end/CustomerApp-Api/pom.xml
+++ b/Back-end/CustomerApp-Api/pom.xml
@@ -68,6 +68,16 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.4</version>
+		</dependency>
     </dependencies>
 	<build>
 		<plugins>
