--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -28,7 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build Vue
         working-directory: Front-end/customerapp-vue
-        run: npm run build
+      - run: npm install
+      - run: npm run build
 
       - name: Docker Build & Push Action
       # You may pin to the exact commit or the version.
