--- a/.github/workflows/vue.yml
+++ b/.github/workflows/vue.yml
@@ -24,11 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Install Dependencies
+        working-directory: Front-end/customerapp-vue
+        run: npm ci
 
       # Runs a single command using the runners shell
       - name: Build Vue
         working-directory: Front-end/customerapp-vue
-        run: npm build
+        run: npm run build
 
       - name: Docker Build & Push Action
       # You may pin to the exact commit or the version.
