Setup for hosting

--- a/Dockercompose.yml
+++ b/Dockercompose.yml
@@ -19,6 +19,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://docker-mariadb:3306/horeca_robot_db?allowPublicKeyRetrieval=true&useSSL=false
     depends_on:
        - docker-mariadb
+    deploy:
+      restart_policy:
+        condition: on-failure
+        
   customerapp-web:
     image: 435914/customerapp-web:latest
     ports:
