--- a/Front-end/customerapp-vue/nginx/nginx.conf
+++ b/Front-end/customerapp-vue/nginx/nginx.conf
@@ -2,6 +2,9 @@ server {
 
   listen 80;
 
+  server_name rigscustomerapi.azurewebsites.net;
+
+
   location / {
 
     root   /usr/share/nginx/html;
