--- a/.github/workflows/maven-main.yml
+++ b/.github/workflows/maven-main.yml
@@ -1,13 +1,11 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Java CI/CD with Maven stable
 
 on:
   push:
-    branches: [ main, dev ]
-  pull_request:
-    branches: [ main, dev ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -27,14 +25,12 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Docker Build & Push Action
-      # You may pin to the exact commit or the version.
-      # uses: mr-smithers-excellent/docker-build-push@a7fe6652db5c7274374844e81692992f5a2befb9
       uses: mr-smithers-excellent/docker-build-push@v5.6
       with:
         # Name of the Docker image
         image: 435914/customerapp-api
         # Tags override for Docker image
-        tags: latest
+        tags: stable
         # Target Docker registry
         registry: docker.io
         # Location of Dockerfile, if not Dockerfile in root directory
