--- a/.github/workflows/vue-main.yml
+++ b/.github/workflows/vue-main.yml
@@ -1,14 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: JavaScript CI/CD with Vue stable
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, dev ]
-  pull_request:
-    branches: [ main, dev ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,14 +33,12 @@ jobs:
         run: npm run build
 
       - name: Docker Build & Push Action
-      # You may pin to the exact commit or the version.
-      # uses: mr-smithers-excellent/docker-build-push@a7fe6652db5c7274374844e81692992f5a2befb9
         uses: mr-smithers-excellent/docker-build-push@v5.6
         with:
           # Name of the Docker image
           image: 435914/customerapp-web
           # Tags override for Docker image
-          tags: latest
+          tags: stable
           # Target Docker registry
           registry: docker.io
           # Location of Dockerfile, if not Dockerfile in root directory
