--- a/.github/workflows/maven-dev.yml
+++ b/.github/workflows/maven-dev.yml
@@ -30,7 +30,7 @@ jobs:
         # Name of the Docker image
         image: 435914/customerapp-api
         # Tags override for Docker image
-        tags: main
+        tags: dev
         # Target Docker registry
         registry: docker.io
         # Location of Dockerfile, if not Dockerfile in root directory
